tests/typechecker/pass/034-incr-decr-compound-assign.hyg
let mutable x: int = 3;
++x;
x++;
x--;
--x;
x += 1;
x -= 1;
x *= 2;
x /= 2;
x %= 2;
let mutable y: float = 3.0f;
++y;
y++;
y--;
--y;
y += 1.0f;
y -= 1.0f;
y *= 2.0f;
y /= 2.0f;
assert(true)
