tests/typechecker/fail/034-incr-non-mutable.hyg
let x: int = 3;
++x;
assert(true)
